added details to pages.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>Welcome to Andromeda Data Lab</span>
-                  <span>A Galaxy of Data Problems</span>
-                  <span>Discover our Projects & Services</span>
+                  <span>A Galaxy of Data Projects</span>
+                  <span>Discover our Services</span>
                 </span>
                 <span id="typed"></span>
               </h1>
