--- a/works.html
+++ b/works.html
@@ -76,7 +76,7 @@
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
                         <h3>Dashcam AI</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                        <p>An app that will extract data from dashcam videos, involving computer vision, machine learning, geo-location data, and statistics.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -87,7 +87,7 @@
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
                         <h3>Wine Tasting</h3>
-                        <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                        <p>An app for novices, connoisseurs, and vineyards to help plan events, educate the public, and to show environmental factors with wine growth and production history.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -97,8 +97,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Job Search</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                        <h3>Searching for SETI (or a Job)</h3>
+                        <p>An app that will provide market research information for job seekers that will scrape job boards and company websites for information on job postings, which will provide useful information to job seekers for an information interview.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
