updated sundry items, from text to images.

--- a/work.html
+++ b/work.html
@@ -66,13 +66,13 @@
         <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Fringilla sit amet</h1>
+            <h1 class="h2">001 : Generating Dashcam Data</h1>
           </div>
           <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
 
           <blockquote>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
+            <p>"AI is a tool. The choice about how it gets deployed is ours."</p>
+            <small class="pull-right">Oren Etzioni</small>
           </blockquote>
         </div>
       </div>
