added pages for apps. Updated pictures.

--- a/work-03.html
+++ b/work-03.html
@@ -63,10 +63,10 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Generating Dashcam Data</h1>
+            <h1 class="h2">003 : Searching for SEIT (or a Job)</h1>
           </div>
           <p>
             Have you ever wondered if you have seen that car/license plate before? If you already have a dashcam or are thinking about purchasing one but are not sure of what to do with all that useful information, you’ve come to the right place. This app will extract all valuable information regarding any license plate the dashcam has seen, track it along your route (given that you’ve enabled geo-tagging), and show you how frequently you see a particular license plate or even the model car. You can even tag the license plates of friends or family members to see if they were also en route. All you have to do is grant us access to the footage and the app will do the rest.</p>
@@ -94,7 +94,7 @@
       </div> -->
 
       <div class="col-xs-12">
-        <img src="./assets/images/work001-02.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/trekking.jpg" class="img-responsive" alt="">
       </div>
 
     </div>
