--- a/works.html
+++ b/works.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Andromeda Data Lab</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -70,36 +70,36 @@
                 <div class="row">
                     <div class="col-sm-4">
 
-                      <a href="./work.html" title="" class="black-image-project-hover">
+                      <a href="./work-01.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/work01-hover.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
                         <h3>Dashcam AI</h3>
                         <p>An app that will extract data from dashcam videos, involving computer vision, machine learning, geo-location data, and statistics.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <a href="./work-01.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
+                      <a href="./work-02.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/work02-hover.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
                         <h3>Wine Tasting</h3>
                         <p>An app for novices, connoisseurs, and vineyards to help plan events, educate the public, and to show environmental factors with wine growth and production history.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <a href="./work-02.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
+                      <a href="./work-03.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/work03-hover.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
                         <h3>Searching for SETI (or a Job)</h3>
                         <p>An app that will provide market research information for job seekers that will scrape job boards and company websites for information on job postings, which will provide useful information to job seekers for an information interview.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <a href="./work-03.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
