--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Andromeda Data Lab</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -80,22 +80,22 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 33 9 07 45 12 65
+                          + 1 (800) 800-800
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          info@andromedadatalab.com
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          20390 Park Place, Saratoga, CA 95070
                         </li>
                       </ul>
-                      <h3>Follow me on social networks</h3>
+                      <!-- <h3>Follow me on social networks</h3>
                       <a href="http://www.facebook.com" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
@@ -104,7 +104,7 @@
                       </a>
                       <a href="http://www.linkedin.com" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
-                      </a>
+                      </a> -->
 
                     </div>
                   </div>
