corrected image file names.

--- a/work-02.html
+++ b/work-02.html
@@ -69,7 +69,7 @@
             <h1 class="h2">002 : Wine Tasting</h1>
           </div>
           <p>
-            Have you ever wondered if you have seen that car/license plate before? If you already have a dashcam or are thinking about purchasing one but are not sure of what to do with all that useful information, you’ve come to the right place. This app will extract all valuable information regarding any license plate the dashcam has seen, track it along your route (given that you’ve enabled geo-tagging), and show you how frequently you see a particular license plate or even the model car. You can even tag the license plates of friends or family members to see if they were also en route. All you have to do is grant us access to the footage and the app will do the rest.</p>
+            Are you planning a visit of multiple wineries in the South Bay and surrounding areas?  Our winery touring app, Tour Dell Catina,is an easy way to conduct a comprehensive  plan to have a memorable experience!  Tour Dell Catina will give you all the details with each winery that includes location, events, hours , tasting fees, accommodations and a lot more. This mobile app will be available for the apple and Android phones from the App Store. Enjoy your trip!</p>
 
           <blockquote>
             <p>"AI is a tool. The choice about how it gets deployed is ours."</p>
