updated wine and job app detail descriptions.

--- a/work-02.html
+++ b/work-02.html
@@ -69,7 +69,11 @@
             <h1 class="h2">002 : Wine Tasting</h1>
           </div>
           <p>
-            Are you planning a visit of multiple wineries in the South Bay and surrounding areas?  Our winery touring app, Tour Dell Catina,is an easy way to conduct a comprehensive  plan to have a memorable experience!  Tour Dell Catina will give you all the details with each winery that includes location, events, hours , tasting fees, accommodations and a lot more. This mobile app will be available for the apple and Android phones from the App Store. Enjoy your trip!</p>
+            Looking to plan your next wine tasting day in the South Bay? Look no further, we have the solution for you. Tour Dell Catina is the newest Wine App to help you plan your next wine tasting day. Our app was designed with you in mind, knowing that everyone’s needs are different, we made the searching, filtering and maps simple to use.
+
+Tour Dell Catina not only list all local wineries but provides search and filtering options to help plan your trip with details such as, location, days open, hours, event, tasting fees, activities and a lot more. We’ve also created regional maps to help you identify other wineries nearby to help maximize your day of tasting. This is the best way to discover and find new wineries easily while providing memorable experiences.
+
+This mobile app will be available for the Apple and Android phones from the App Store. Wine tasting made easy!</p>
 
           <blockquote>
             <p>"AI is a tool. The choice about how it gets deployed is ours."</p>
