--- a/work-03.html
+++ b/work-03.html
@@ -69,7 +69,7 @@
             <h1 class="h2">003 : Searching for SEIT (or a Job)</h1>
           </div>
           <p>
-            Have you ever wondered if you have seen that car/license plate before? If you already have a dashcam or are thinking about purchasing one but are not sure of what to do with all that useful information, you’ve come to the right place. This app will extract all valuable information regarding any license plate the dashcam has seen, track it along your route (given that you’ve enabled geo-tagging), and show you how frequently you see a particular license plate or even the model car. You can even tag the license plates of friends or family members to see if they were also en route. All you have to do is grant us access to the footage and the app will do the rest.</p>
+            How is your job search going? Do you feel it like searching for SETI (life in the universe)? Our app is here to help you in your journey and find the right job.</p>
 
           <blockquote>
             <p>"AI is a tool. The choice about how it gets deployed is ours."</p>
