removed 4 and 5 pages.

--- a/work-05.html
+++ b/work-05.html
@@ -66,7 +66,7 @@
         <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">003 : Searching for SEIT (or a Job)</h1>
+            <h1 class="h2">005 : Data Science with Finance</h1>
           </div>
           <p>
             How is your job search going? Do you feel it like searching for SETI (life in the universe)? Our app is here to help you in your journey and find the right job.</p>
