--- a/works.html
+++ b/works.html
@@ -115,12 +115,12 @@
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>iOT Test Sandbox</h3>
-                      <p>Test your iOT devices before you scale.</p>
+                      <h3>iOT Sandbox</h3>
+                      <p>Test your iOT devices before you scale. You can choose your cloud (AWS, Azure, GCP or IBM) for your iOT devices and test them before deploying at scale.</p>
                       <a href="./work-04.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
-                   <div class="col-sm-4">
+                   <!-- <div class="col-sm-4">
                       <a href="./work.html" class="black-image-project-hover">
                         <img src="./assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
                       </a>
@@ -142,7 +142,7 @@
                         <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
                         <a href="./work.html" class="btn btn-default">Discover</a>
                       </div>
-                    </div>
+                    </div> -->
                     
                 </div>
                 <!--/row-->
