--- a/work-04.html
+++ b/work-04.html
@@ -63,7 +63,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/iot.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">004 : iOT Platform</h1>
@@ -94,7 +94,7 @@
       </div> -->
 
       <div class="col-xs-12">
-        <img src="./assets/images/trekking.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/iot-cloud.png" class="img-responsive" alt="">
       </div>
 
     </div>
